修复head部分 js问题

--- a/src/main/webapp/html/student-course.html
+++ b/src/main/webapp/html/student-course.html
@@ -119,5 +119,10 @@
         $(".u-greentab").removeClass("u-curtab");
         $(this).addClass("u-curtab");
     })
+    $(".info").hover(function(){
+        $(".sets").css("display","block");
+    },function(){
+        $(".sets").css("display","none");
+    })
 </script>
 </html>
