--- a/src/main/webapp/html/student-home-example.html
+++ b/src/main/webapp/html/student-home-example.html
@@ -6,10 +6,6 @@
     <link rel="stylesheet" href="../css/font-awesome-ie7.css">
     <link rel="stylesheet" href="../css/head.css">
     <link rel="stylesheet" href="../css/student-home.css">
-    
-    <script type="text/javascript" src="../js/jquery.js"></script>
-    <script type="text/javascript" src="../js/cookie.js"></script>
-   
    </head>
 <body>
    <div id="g-container">
@@ -88,11 +84,10 @@
                         <a href="#">编辑头像</a>
                     </div>
                 </div>
-                <div class="u-ui-name"><span class="user-name" id="stu-name">学生姓名</span></div>
-                <div class="u-ui-tag "><span id="stu-id">学号</span></div>
-                <!-- <div class="u-ui-desc "><span class="f-2lines" id="stu-name">姓名</span></div>
-                 -->
-                 <div class="u-ui-f2f"><span><span>学院</span>:<span id="f-name">学院名</span></span>
+                <div class="u-ui-name"><span class="user-name">用户名</span></div>
+                <div class="u-ui-tag "><span>学生</span></div>
+                <div class="u-ui-desc "><span class="f-2lines">这是一个个人简介</span></div>
+                <div class="u-ui-f2f"><span><span>学院</span>:<span id="f-name">学院名</span></span>
                 </div>
             </div>
         </div>
@@ -182,5 +177,4 @@
         $(".e-hover-code").css("display","none");
     })
 </script>
- <script type="text/javascript" src="../js/student.js"></script>
 </html>
