--- a/src/main/webapp/html/student-home.html
+++ b/src/main/webapp/html/student-home.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="../css/head.css">
     <link rel="stylesheet" href="../css/student-home.css">
     
-    <script type="text/javascript" src="../js/jquery.js"></script>
-    <script type="text/javascript" src="../js/cookie.js"></script>
+    <script type="text/javascript" src="../js/jquery.js"></script>    
    
    </head>
 <body>
@@ -103,7 +102,7 @@
                         <div class="u-selectTab-container">
                             <div class="u-st-tag current ga-click" style="left: 0px;" data-action="课程tag点击">
                                 <a href="#" target="_top">
-                                    <span>课程</span>
+                                    <span class="courses_number">课程</span>
                                 </a>
                             </div>
                             <div class="u-st-tag ga-click" style="left: 100px;" data-action="讨论tag点击">
@@ -121,30 +120,7 @@
                                     <div class="m-homecourse" id="j-coursewrap" style=""><div class="course-panel-wrapper">
                                         <div class="course-panel-body-wrapper">
                                             <!--Regular list-->
-                                            <div class="course-card-wrapper">
-                                                <div class="box">
-                                                    <a href="/learn/NWU-298002?tid=1002252001" target="_blank" class="ga-click" data-action="课程tag-非新学期课程">
-                                                        <div class="img">
-                                                            <img src="http://img1.ph.126.net/1JJdFGKDIKqvVeS7i9XJrQ==/6630083702792788774.jpg" alt="数据结构">
-                                                        </div>
-                                                        <div class="body">
-                                                            <div class="common-info-wrapper common-info-wrapper-fix-height">
-                                                                <div class="title">
-                                                                    <div class="text">
-                                                                        <span class="text">数据结构</span>
-                                                                    </div>
-                                                                </div>
-                                                                <div class="school">
-                                                                    <a target="_blank" href="/university/NWU">西北大学</a>
-                                                                </div>
-                                                            </div>
-                                                            <div class="personal-info">
-                                                                <div class="course-status">2017年12月31日学期结束</div>
-                                                            </div>
-                                                        </div>
-                                                    </a>
-                                                </div>
-                                            </div>
+                                            
                                         </div>
                                         <div class="course-panel-foot-wrapper">
                                             <ul class="ux-pager z-hdn">
@@ -183,4 +159,5 @@
     })
 </script>
  <script type="text/javascript" src="../js/student.js"></script>
+ <script type="text/javascript" src="../js/tools.js"></script>
 </html>
