--- a/src/main/webapp/html/student-home.html
+++ b/src/main/webapp/html/student-home.html
@@ -101,12 +101,12 @@
                     <div id="j-module-tab" class="module-tab">
                         <div class="u-selectTab-container">
                             <div class="u-st-tag current ga-click" style="left: 0px;" data-action="课程tag点击">
-                                <a href="#" target="_top">
+                                <a href="javascript:;" target="_top">
                                     <span class="courses_number">课程</span>
                                 </a>
                             </div>
                             <div class="u-st-tag ga-click" style="left: 100px;" data-action="讨论tag点击">
-                                <a href="#" target="_top">
+                                <a href="#" target="_top" >
                                     <span>成绩</span>
                                 </a>
                             </div>
@@ -117,9 +117,10 @@
                             <div class="b-10"></div>
                             <div class="g-mn2">
                                 <div class="g-mn2c">
-                                    <div class="m-homecourse" id="j-coursewrap" style=""><div class="course-panel-wrapper">
+                                    <div class="m-homecourse" id="j-coursewrap" style="">
+                                    <div class="course-panel-wrapper">
                                         <div class="course-panel-body-wrapper">
-                                            <!--Regular list-->
+                                            <!--course list-->
                                             
                                         </div>
                                         <div class="course-panel-foot-wrapper">
