--- a/src/main/webapp/html/teacher-course-base.html
+++ b/src/main/webapp/html/teacher-course-base.html
@@ -93,7 +93,7 @@
                     </li>
                     <li class="u-greentab j-tabitem f-f0 " data-name="课件" data-type="3" data-id="1002347045"
                         id="auto-id-1507098444832">
-                        <a class="f-thide f-fc3" href="student-courseware">课件</a>
+                        <a class="f-thide f-fc3" href="teacher-courseware">课件</a>
                     </li>
                     <li class="u-greentab j-tabitem f-f0 last" data-name="讨论区" data-type="7" data-id="1002347048"
                         id="auto-id-1507098444835">
