--- a/src/main/webapp/html/course-base.html
+++ b/src/main/webapp/html/course-base.html
@@ -5,6 +5,7 @@
     <title>课程中心--学生</title>
     <link rel="stylesheet" href="../css/head.css">
     <link rel="stylesheet" href="../css/student-course.css">
+    <link rel="stylesheet" href="http://mc.stu.126.net/pub/s/web/pt_home.css?16e6e3fc07c8ec874178a9562aca6ce3">
 </head>
 <body>
 <div id="g-container">
@@ -82,20 +83,24 @@
                          width="230" height="130" alt="数据结构">
                 </div>
                 <ul id="j-courseTabList" class="tab u-tabul">
-                    <li class="u-greentab j-tabitem f-f0 first u-curtab" data-name="公告" data-type="1"
+                    <li class="u-greentab j-tabitem f-f0 first u-curtab" data-name="课程简介" data-type="1"
                         data-id="1002347043" id="auto-id-1507098444830">
-                        <a class="f-thide f-fc3" href="announce">公告</a>
+                        <a class="f-thide f-fc3" href="announce">课程简介</a>
                     </li>
                     <li class="u-greentab j-tabitem f-f0 " data-name="评分标准" data-type="2" data-id="1002347044"
                         id="auto-id-1507098444831">
                         <a class="f-thide f-fc3" href="#">评分标准</a>
                     </li>
-                    <li class="u-greentab j-tabitem f-f0 " data-name="课件" data-type="3" data-id="1002347045"
+                    <li class="u-greentab j-tabitem f-f0 " data-name="课程大纲" data-type="3" data-id="1002347045"
                         id="auto-id-1507098444832">
-                        <a class="f-thide f-fc3" href="#">课件</a>
+                        <a class="f-thide f-fc3" href="#">课程大纲</a>
                     </li>
-                    <li class="u-greentab j-tabitem f-f0 last" data-name="讨论区" data-type="7" data-id="1002347048"
+                    <li class="u-greentab j-tabitem f-f0 last" data-name="课件" data-type="7" data-id="1002347048"
                         id="auto-id-1507098444835">
+                        <a class="f-thide f-fc3" href="student-courseware">课件</a>
+                    </li>
+                    <li class="u-greentab j-tabitem f-f0 " data-name="实验" data-type="6" data-id="1002347047"
+                        id="auto-id-1507098444834">
                         <a class="f-thide f-fc3" href="#">实验</a>
                     </li>
                     <li class="u-greentab j-tabitem f-f0 " data-name="测验与作业" data-type="4" data-id="1002347046"
@@ -110,7 +115,14 @@
                 </ul>
             </div>
         </div>
-        <div class="right"></div>
+        <div class="g-mn1">
+            <div class="g-mn1c m-learnbox">
+                <div class="left-mn">
+
+                </div>
+            </div>
+
+        </div>
     </div>
 </div>
 </body>
@@ -140,7 +152,7 @@
 					if(data=="error"){
 						window.parent.location.href = "/index.html";
 					}else{
-					$(".right").empty().html(data);
+					$(".m-learnbox").empty().html(data);
 					}
 				},
 				error : function() {
@@ -174,7 +186,7 @@
 					if(data=="error"){
 						window.parent.location.href = "/index.html";
 					}else{
-						$(".right").empty().html(data);
+						$(".m-learnbox").empty().html(data);
 					}
 				},
 				error : function() {
@@ -229,7 +241,7 @@
 						if(data=="error"){
 							window.parent.location.href = "/index.html";
 						}else{
-						$(".right").empty().html(data);
+						$(".m-learnbox").empty().html(data);
 						}
 					},
 					error : function() {
