login.html改为index.html;实现学生和教师登录

--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>大数据教学平台</title>
     <link rel="stylesheet" href="../css/head.css">
     <link rel="stylesheet" href="../css/login.css">
     <script type="text/javascript" src="../js/jquery.js"></script>
+   	<script type="text/javascript" src="../js/tools.js"></script>
+    <script type="text/javascript" src="../js/login.js"></script>
+    
 </head>
 <body>
 <div id="g-container">
@@ -26,8 +29,8 @@
                     <img class="u-cancel" src="../img/ico-close-del.png">
                 </div>
                 <div id="login-role">
-                    <input type="radio" name="role" value="教师" checked="checked" style="margin-left: 50px">教师
-                    <input type="radio" name="role" value="学生" style="margin-left: 70px ">学生
+                    <input type="radio" name="role" value="教师" style="margin-left: 50px">教师
+                    <input type="radio" name="role" value="学生" checked="checked" style="margin-left: 70px ">学生
                 </div>
                 <div id="login-btn">
                     <button class="login-btn">登录</button>
