--- a/src/main/webapp/html/teacher-courseware.html
+++ b/src/main/webapp/html/teacher-courseware.html
@@ -15,23 +15,21 @@
     </div>
     <div class="m-learnChapterNormal f-pr">
         <div>
-            <div class="titleBox j-titleBox f-cb">
+            <div class="titleBox j-titleBox f-cb" onclick="titleClick(this)">
                 <div class="f-icon cpicon j-down f-fl u-icon-caret-up" style=""></div>
                 <div class="f-icon cpicon j-up f-fl u-icon-caret-down" style="display: none;"></div>
                 <input class="j-titleName name f-fl f-thide" value="第一章 绪论（总时长：56分26秒，共6讲）" placeholder="请输入章名">
                 <div class="j-typebox f-cb f-fr">
-                    <div class="f-icon lsicon f-fl " title="删除">
+                    <div class="f-icon lsicon f-fl " title="删除" onclick="delTitle(this)">
                         <span class="u-icon-close"></span>
                     </div>
                 </div>
             </div>
             <div class="lessonBox j-lessoBox" style="">
-                <div>
                     <div class="u-learnLesson normal f-cb">
                         <div class="j-icon icon f-pa icon-1"></div>
                         <input class="j-name name f-fl f-thide" value="第1讲 数据结构的基础概念（总时长12分钟）" placeholder="请输入节名">
                         <div class="j-typebox f-cb f-fr">
-                            <div>
                                 <div class="f-icon lsicon f-fl learned" title="教学视频上传"
                                      id="auto-id-1508033115800">
                                     <span class="u-icon-video2"></span>
@@ -41,41 +39,32 @@
                                     <span class="u-icon-doc"></span>
                                     <input type="file" class="upload">
                                 </div>
-                                <div class="f-icon lsicon f-fl " title="删除">
+                                <div class="f-icon lsicon f-fl " title="删除" onclick="delContent(this)">
                                     <span class="u-icon-close"></span>
                                 </div>
-                            </div>
                         </div>
                     </div>
-                </div>
                 <div class="u-learnLesson normal f-cb" style="padding: 0">
-                    <div class="f-icon lesson-content-plus" style="width: 50px;height: 50px; margin: 0 -25px;left:50%" onclick="addContent(this)">
+                    <div class="f-icon lesson-content-plus" style="width: 50px;height: 50px; margin: 0 -75px;left:50%" onclick="addContent(this)">
                     <span class="u-icon-plus"
+                          style=" font-size: 40px;margin: -20px -20px; position: absolute; top:50%; left:50%"></span>
+                    </div>
+                    <div class="f-icon lesson-content-ok" style="width: 50px;height: 50px; margin: 0 15px;left:50%" onclick="submitLesson(this)">
+                    <span class="u-icon-check"
                           style=" font-size: 40px;margin: -20px -20px; position: absolute; top:50%; left:50%"></span>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="f-icon lesson-title-plus" style="width: 50px;height: 50px;" onclick="addTitle(this)">
+        <div class="f-icon lesson-title-plus" style="width: 70px;height: 70px;" onclick="addTitle(this)">
         <span class="u-icon-plus"
-              style=" font-size: 40px;margin: -20px -20px; position: absolute; top:50%; left:50%"></span>
+              style=" font-size: 60px;margin: -30px -30px; position: absolute; top:50%; left:50%"></span>
         </div>
     </div>
 </div>
 </body>
 <script type="text/javascript" src="../js/teacher-courseware.js"></script>
 <script type="text/javascript">
-    $(".titleBox").click(function () {
-        if ($(this).children(".u-icon-caret-up").css("display") == "none") {
-            $(this).children(".u-icon-caret-up").css("display", "block");
-            $(this).children(".u-icon-caret-down").css("display", "none");
-            $(this).next(".lessonBox").css("display", "block");
-        } else {
-            $(this).children(".u-icon-caret-up").css("display", "none");
-            $(this).children(".u-icon-caret-down").css("display", "block");
-            $(this).next(".lessonBox").css("display", "none");
-        }
-    });
     $(".name").click(function () {
         return false;
     });
