--- a/src/main/webapp/html/course-base.html
+++ b/src/main/webapp/html/course-base.html
@@ -47,7 +47,7 @@
                 </div>
                 <div class="u-navLogin-myCourse">
                     <div class="u-navLogin-myCourse u-navLogin-center-container">
-                        <a href="#" target="_top">
+                        <a href="student-home.html" target="_top">
                             <span class="nav">个人中心</span>
                         </a>
                     </div>
@@ -83,19 +83,19 @@
                          width="230" height="130" alt="数据结构">
                 </div>
                 <ul id="j-courseTabList" class="tab u-tabul">
-                    <li class="u-greentab j-tabitem f-f0 first u-curtab" data-name="公告" data-type="1"
+                    <li class="u-greentab j-tabitem f-f0 first u-curtab" data-name="课程介绍" data-type="1"
                         data-id="1002347043" id="auto-id-1507098444830">
-                        <a class="f-thide f-fc3" href="announce">公告</a>
+                        <a class="f-thide f-fc3" href="course-introduce">课程介绍</a>
                     </li>
-                    <li class="u-greentab j-tabitem f-f0 " data-name="评分标准" data-type="2" data-id="1002347044"
+                    <li class="u-greentab j-tabitem f-f0 " data-name="教学大纲" data-type="2" data-id="1002347044"
                         id="auto-id-1507098444831">
-                        <a class="f-thide f-fc3" href="#">评分标准</a>
+                        <a class="f-thide f-fc3" href="#">教学大纲</a>
                     </li>
                     <li class="u-greentab j-tabitem f-f0 " data-name="课件" data-type="3" data-id="1002347045"
                         id="auto-id-1507098444832">
                         <a class="f-thide f-fc3" href="student-courseware">课件</a>
                     </li>
-                    <li class="u-greentab j-tabitem f-f0 last" data-name="讨论区" data-type="7" data-id="1002347048"
+                    <li class="u-greentab j-tabitem f-f0 last" data-name="实验" data-type="7" data-id="1002347048"
                         id="auto-id-1507098444835">
                         <a class="f-thide f-fc3" href="#">实验</a>
                     </li>
