--- a/src/main/webapp/html/student-home.html
+++ b/src/main/webapp/html/student-home.html
@@ -38,7 +38,7 @@
                                                 <a class="a" href="#" target="_blank">设置</a>
                                             </li>
                                             <li class="exit">
-                                                <a href="#">退出</a>
+                                                <a href="javascript:studentLogout();">退出</a>
                                             </li>
                                         </ul>
                                     </div>
