测试 课件上传功能

--- a/src/main/webapp/html/teacher-course-base.html
+++ b/src/main/webapp/html/teacher-course-base.html
@@ -73,7 +73,7 @@
             </div>
         </div>
     </div>
-    <div id="g-body">
+    <div id="g-body1">
         <div class="m-cbg"></div>
         <div class="g-sd1">
             <div class="m-learnleft">
