教师课程上传界面 倒数第3版

--- a/src/main/webapp/html/teacher-courseware.html
+++ b/src/main/webapp/html/teacher-courseware.html
@@ -110,6 +110,12 @@
                             <span class="u-icon-close"></span>
                         </div>
                     </div>
+                    <div class="f-pr f-fl u-source" style="border: 0" title="添加pdf">
+                        <div class="f-pa u-source-add" onclick="addPdf(this)">
+                            <span class="f-pa u-icon-plus"></span>
+                        </div>
+                        <input type="file" multiple="multiple" style="width: 0px;height: 0px;display: none">
+                    </div>
                 </div>
                 <div class="u-learnLesson normal f-cb" style="padding: 0">
                     <div class="f-icon lesson-content-plus" style="width: 50px;height: 50px; margin: 0 -25px;left:50%"
