修改course-base图片，js引用

--- a/src/main/webapp/html/course-base.html
+++ b/src/main/webapp/html/course-base.html
@@ -78,8 +78,8 @@
         <div class="g-sd1">
             <div class="m-learnleft">
                 <div class="top f-pr">
-                    <img class="" id=""
-                         src="http://imgsize.ph.126.net/?enlarge=true&amp;imgurl=http://img1.ph.126.net/1JJdFGKDIKqvVeS7i9XJrQ==/6630083702792788774.jpg_230x130x1x95.png"
+                    <img class="course-image" id=""
+                         src="../img/course-img.jpg"
                          width="230" height="130" alt="数据结构">
                 </div>
                 <ul id="j-courseTabList" class="tab u-tabul">
@@ -124,7 +124,7 @@
 </body>
 <script type="application/javascript" src="../js/jquery.js"></script>
 <script type="text/javascript" src="../js/bootstrap.js"></script>
-<script type="text/javascript" src="../js/student-course.js"></script>
+<script type="text/javascript" src="../js/course.js"></script>
 <script type="text/javascript" src="../js/tools.js"></script>
 <script type="application/javascript">
 	bootstrapButton = $.fn.button.noConflict();
