补充文件的存放路径

--- a/src/main/webapp/html/teacher-course-base.html
+++ b/src/main/webapp/html/teacher-course-base.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="../css/head.css">
     <link rel="stylesheet" href="../css/student-course.css">
     <link rel="stylesheet" href="http://mc.stu.126.net/pub/s/web/pt_home.css?16e6e3fc07c8ec874178a9562aca6ce3">
+    <script type="application/javascript" src="../js/jquery.js"></script>
+	<script type="text/javascript" src="../js/bootstrap.js"></script>
+    <script type="text/javascript" src="../js/tools.js"></script>
+    <script type="text/javascript" src="../js/course.js"></script>
 </head>
 <body>
 <div id="g-container">
@@ -78,8 +82,8 @@
         <div class="g-sd1">
             <div class="m-learnleft">
                 <div class="top f-pr">
-                    <img class="" id=""
-                         src="http://imgsize.ph.126.net/?enlarge=true&amp;imgurl=http://img1.ph.126.net/1JJdFGKDIKqvVeS7i9XJrQ==/6630083702792788774.jpg_230x130x1x95.png"
+                    <img class="course_photo" id=""
+                         src=""
                          width="230" height="130" alt="数据结构">
                 </div>
                 <ul id="j-courseTabList" class="tab u-tabul">
@@ -122,10 +126,7 @@
     </div>
 </div>
 </body>
-<script type="application/javascript" src="../js/jquery.js"></script>
-<script type="text/javascript" src="../js/bootstrap.js"></script>
-<script type="text/javascript" src="../js/student-course.js"></script>
-<script type="text/javascript" src="../js/tools.js"></script>
+
 <script type="application/javascript">
 	bootstrapButton = $.fn.button.noConflict();
 	$.fn.bootstrapBtn = bootstrapButton;
