--- a/src/main/webapp/html/teacher-home.html
+++ b/src/main/webapp/html/teacher-home.html
@@ -39,7 +39,7 @@
                                                 <a class="a" href="#" target="_blank">设置</a>
                                             </li>
                                             <li class="exit">
-                                                <a href="#">退出</a>
+                                                <a href="javascript:teacherLoginOut();">退出</a>
                                             </li>
                                         </ul>
                                     </div>
