修改css样式表

--- a/src/main/webapp/html/student-courseware.html
+++ b/src/main/webapp/html/student-courseware.html
@@ -25,7 +25,7 @@
                 <h4 class="j-name name f-fl f-thide">第1讲 数据结构的基础概念（总时长12分钟）</h4>
                 <div class="j-typebox f-cb f-fr">
                     <div>
-                        <div class="f-icon lsicon f-fl learned" data-cid="1003495671" title="视频：第1讲&nbsp;数据结构的基础概念视频" id="auto-id-1508033115800">
+                        <div class="f-icon lsicon f-fl learned" data-cid="1003495671" title="视频：第1讲&nbsp;数据结构的基础概念视频" id="auto-id-1508033115800" onclick="baseAjax('student-courseware-details')">
                             <span class="u-icon-video2"></span>
                         </div>
                         <div class="f-icon lsicon f-fl " data-cid="1003495672" title="富文本：第1讲数据结构的基础概念--内容简介" id="auto-id-1508033115802">
