在章表和节表中添加时间，完成课程简介和课程大纲的填写

--- a/src/main/webapp/html/teacher-course-base.html
+++ b/src/main/webapp/html/teacher-course-base.html
@@ -2,14 +2,14 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>课程中心--学生</title>
+    <title>课程中心--教师</title>
     <link rel="stylesheet" href="../css/head.css">
     <link rel="stylesheet" href="../css/student-course.css">
     <link rel="stylesheet" href="http://mc.stu.126.net/pub/s/web/pt_home.css?16e6e3fc07c8ec874178a9562aca6ce3">
     <script type="application/javascript" src="../js/jquery.js"></script>
 	<script type="text/javascript" src="../js/bootstrap.js"></script>
+	<script type="text/javascript" src="../js/course.js"></script>
     <script type="text/javascript" src="../js/tools.js"></script>
-    <script type="text/javascript" src="../js/course.js"></script>
 </head>
 <body>
 <div id="g-container">
