--- a/src/main/webapp/html/teacher-courseware.html
+++ b/src/main/webapp/html/teacher-courseware.html
@@ -16,8 +16,8 @@
             <div class="titleBox j-titleBox f-cb" onclick="titleClick(this)">
                 <div class="f-icon cpicon j-down f-fl u-icon-caret-up" style=""></div>
                 <div class="f-icon cpicon j-up f-fl u-icon-caret-down" style="display: none;"></div>
-                <input class="j-titleName name f-fl f-thide" disabled="disabled" value="第一章 绪论（总时长：56分26秒，共6讲）"
-                       placeholder="请输入章名" onclick="stopBubble()">
+                <input class="j-titleName name f-fl f-thide" disabled="disabled" value="第一章 绪论"
+                       placeholder="请输入章名" id="chapterContent" onclick="stopBubble()">
                 <div class="j-typebox f-cb f-fr" onclick="stopBubble()">
                     <div class="f-icon lsicon f-fl " title="编辑" onclick="editInfo(this)">
                         <span class="u-icon-edit"></span>
@@ -33,7 +33,7 @@
             <div class="lessonBox j-lessoBox" style="">
                 <div class="u-learnLesson normal f-cb">
                     <div class="j-icon icon f-pa icon-1"></div>
-                    <input class="j-name name f-fl f-thide" disabled="disabled" value="第1讲 数据结构的基础概念（总时长12分钟）"
+                    <input class="j-name name f-fl f-thide" disabled="disabled" value="第1讲 数据结构的基础概念"
                            placeholder="请输入节名" onclick="stopBubble()">
                     <div class="j-typebox f-cb f-fr" onclick="stopBubble()">
                         <div class="f-icon lsicon f-fl " title="教学视频上传">
