--- a/src/main/webapp/html/teacher-courseware.html
+++ b/src/main/webapp/html/teacher-courseware.html
@@ -17,7 +17,7 @@
                 <div class="f-icon cpicon j-down f-fl u-icon-caret-up" style=""></div>
                 <div class="f-icon cpicon j-up f-fl u-icon-caret-down" style="display: none;"></div>
                 <input class="j-titleName name f-fl f-thide" disabled="disabled" value="第一章 绪论"
-                       placeholder="请输入章名" id="chapterContent" onclick="stopBubble()">
+                       placeholder="请输入章名"  onclick="stopBubble()">
                 <div class="j-typebox f-cb f-fr" onclick="stopBubble()">
                     <div class="f-icon lsicon f-fl " title="编辑" onclick="editInfo(this)">
                         <span class="u-icon-edit"></span>
