完成课件页面，PDF，视频显示功能

--- a/src/main/webapp/html/student-courseware.html
+++ b/src/main/webapp/html/student-courseware.html
@@ -18,6 +18,7 @@
     </div>
 </div>
 </body>
+<script type="text/javascript" src="../js/course.js"></script>
 <script type="text/javascript">
 	showChapters();
 </script>
