--- a/src/main/webapp/html/student-courseware-video.html
+++ b/src/main/webapp/html/student-courseware-video.html
@@ -7,6 +7,7 @@
     <link href="http://vjs.zencdn.net/5.0.2/video-js.css" rel="stylesheet">
     <script src="http://vjs.zencdn.net/5.0.2/video.js"></script>
     <script src="../js/jquery.media.js"></script>
+    <script src="../js/student-courseware-video.js"></script>
 </head>
 <body>
 <div class="m-lessonDetail">
@@ -55,28 +56,7 @@
                         </div>
                     </div>
                 </div>
-                <span class="f-icon f-fl icon u-icon-caret-right2"></span>
-                <div class="f-fl j-lesson">
-                    <div class="u-select">
-                        <div class="up j-up f-thide" id="1">第2讲 数据结构的内容（总时长5分29秒）</div>
-                        <div class="down f-bg j-list" style="display: none;">
-                            <div class="f-thide list" title="第1讲&nbsp;数据结构的基础概念（总时长12分钟）" id="2">第1讲&nbsp;数据结构的基础概念（总时长12分钟）</div>
-                            <div class="f-thide list" title="第2讲&nbsp;数据结构的内容（总时长5分29秒）" id="3">第2讲&nbsp;数据结构的内容（总时长5分29秒）</div>
-                            <div class="f-thide list" title="第3讲&nbsp;数据结构与c语言表示（总时长7分32秒）" id="4">
-                                第3讲&nbsp;数据结构与c语言表示（总时长7分32秒）
-                            </div>
-                            <div class="f-thide list" title="第4讲&nbsp;算法性能评价（总时长8分06秒）" id="5">
-                                第4讲&nbsp;算法性能评价（总时长8分06秒）
-                            </div>
-                            <div class="f-thide list" title="第5讲&nbsp;算法与算法的描述（总时长14分59秒）" id="6">
-                                第5讲&nbsp;算法与算法的描述（总时长14分59秒）
-                            </div>
-                            <div class="f-thide list" title="总结与提高（总时长8分20秒）" id="">
-                                总结与提高（总时长8分20秒）
-                            </div>
-                        </div>
-                    </div>
-                </div>
+               
             </div>
         </div>
     </div>
@@ -87,10 +67,9 @@
             <div class="m-learnunitUI f-pr">
                 <div class="j-unitctBox unitctBox f-pr hide-replay-icon" style="height: 540px; overflow-y: visible;">
                     <div></div>
-                    <div class="ux-video-player">
+                    <div class="ux-video-player" onclick="pp()">
                         <video controls preload="metadata" autoplay>
-                            <source src="../test.mp4"
-                                    type="video/mp4" id="auto-id-1508326052801">
+                            <source class="video" src="" type="video/mp4" id="">
                         </video>
                     </div>
                 </div>
@@ -99,4 +78,15 @@
     </div>
 </div>
 </body>
+<script>
+showChapterTitle();
+	function pp(){
+		var media = $("video")[0];
+		if(media.paused){
+			media.play();
+		}else{
+			media.pause();	
+		}
+	}
+</script>
 </html>
