修改登录页面的图片

--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -12,11 +12,8 @@
 </head>
 <body>
 <div id="g-container">
-    <div id="g-nav-top">
-        大数据教学平台
-    </div>
-    <div id="g-background">
         <div class="login-box">
+            <span style="position: absolute;top: 30px;left:39px;font-size: 30px; font-family: 'Microsoft Sans Serif' , Arial, Helvetica, Verdana">大数据教学平台登录</span>
             <div class="login-container">
                 <div id="user-account" class="user-info">
                     <img class="u-img" src="../img/ico-username.png">
@@ -37,8 +34,7 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div id="g-nav-bottom">
+    <div id="g-nav-bottom" align="center">
         华中科技大学网络中心
     </div>
 </div>
