--- a/src/main/webapp/html/teacher-courseware.html
+++ b/src/main/webapp/html/teacher-courseware.html
@@ -11,8 +11,7 @@
     <div class="j-moduletitle u-learn-moduletitle f-cb" style="">
         <h2 class="j-moduleName">课件管理<br></h2>
     </div>
-    <div class="m-learnChapterNormal f-pr">
-        
+    <div class="m-learnChapterNormal f-pr"> 
         <div class="f-icon lesson-title-plus" style="width: 70px;height: 70px;" onclick="addTitle(this)">
         <span class="u-icon-plus"
               style=" font-size: 60px;margin: -30px -30px; position: absolute; top:50%; left:50%"></span>
@@ -21,4 +20,7 @@
 </div>
 </body>
 <script type="text/javascript" src="../js/teacher-courseware.js"></script>
+<script type="text/javascript">
+	showChapters();
+</script>
 </html>
