修改登录页面的图片

--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -34,8 +34,10 @@
                 </div>
             </div>
         </div>
-    <div id="g-nav-bottom" align="center">
-        华中科技大学网络中心
+    <div id="g-nav-bottom" style="font-family: 'Microsoft Sans Serif' , Arial, Helvetica, Verdana">
+        <span style="position: absolute; height: 20px; font-size: 16px;margin-top: -15px; top: 50%; left: 100px;">华中科技大学网络中心大数据课题组</span>
+        <span style="position: absolute; height: 20px; font-size: 16px;margin-top: -15px; top: 50%; right: 50px;">© 2006-2017　华中科技大学注册中心</span>
+
     </div>
 </div>
 </body>
