教师实验管理页面添加时间功能 增加评分标准管理功能

--- a/src/main/webapp/html/teacher-course-base.html
+++ b/src/main/webapp/html/teacher-course-base.html
@@ -3,6 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>课程中心--教师</title>
+    <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="../css/head.css">
     <link rel="stylesheet" href="../css/student-course.css">
     <link rel="stylesheet" href="http://mc.stu.126.net/pub/s/web/pt_home.css?16e6e3fc07c8ec874178a9562aca6ce3">
@@ -83,7 +84,7 @@
             <div class="m-learnleft">
                 <div class="top f-pr">
                     <img class="course_photo" id=""
-                         src=""
+                         src="../img/bgi1.jpg"
                          width="230" height="130" alt="数据结构">
                 </div>
                 <ul id="j-courseTabList" class="tab u-tabul">
@@ -95,21 +96,24 @@
                         id="auto-id-1507098444831">
                         <a class="f-thide f-fc3" href="teacher-course-outline">教学大纲管理</a>
                     </li>
+                    <li class="u-greentab j-tabitem f-f0 " data-name="评分标准管理" data-type="2" data-id="1002347044">
+                        <a class="f-thide f-fc3" href="teacher-mark-rule">评分标准管理</a>
+                    </li>
                     <li class="u-greentab j-tabitem f-f0 " data-name="课件管理" data-type="3" data-id="1002347045"
                         id="auto-id-1507098444832">
                         <a class="f-thide f-fc3" href="teacher-courseware">课件管理</a>
                     </li>
                     <li class="u-greentab j-tabitem f-f0 last" data-name="实验管理" data-type="7" data-id="1002347048"
                         id="auto-id-1507098444835">
-                        <a class="f-thide f-fc3" href="#">实验管理</a>
+                        <a class="f-thide f-fc3" href="teacher-experiment">实验管理</a>
                     </li>
                     <li class="u-greentab j-tabitem f-f0 " data-name="测验与作业" data-type="4" data-id="1002347046"
                         id="auto-id-1507098444833">
-                        <a class="f-thide f-fc3" href="#">测验与作业</a>
+                        <a class="f-thide f-fc3" href="javascript:;">测验与作业</a>
                     </li>
                     <li class="u-greentab j-tabitem f-f0 " data-name="考试" data-type="6" data-id="1002347047"
                         id="auto-id-1507098444834">
-                        <a class="f-thide f-fc3" href="#">考试</a>
+                        <a class="f-thide f-fc3" href="javascript:;">考试</a>
                     </li>
                     
                 </ul>
