完成课件页面的显示

--- a/src/main/webapp/html/teacher-course-introduce.html
+++ b/src/main/webapp/html/teacher-course-introduce.html
@@ -48,6 +48,7 @@
     function showIntroduce()
     {
     	  var courseId = getCookie("courseId");
+    	  console.log("courseId:"+courseId);
     	  $.ajax({
       		type:"POST",
       		url:"/course/getCourseById",
